# Student

./: .gitignore  1.txt  2.txt  README.md  db.sqlite3  problems.md  pyproject.toml  script.py
.unotes/: unotes_meta.json
server/: settings.py  urls.py
student/: common.py  forms.py  models.py  serializers.py  student.json  urls.py  views.py
student/fixtures/: parent.json
student/migrations/: 0001_initial.py  0002_parent_subject_student_age greater than 5_and_more.py  0003_alter_student_subject.py  0004_alter_student_parent.py  0005_remove_student_subject_student_subjects.py  0006_token_remove_student_email_user_parent_user_data.py  0007_remove_parent_user_data_delete_user.py  0008_parent_password_parent_token_id_parent_username_and_more.py  0009_rename_token_id_parent_token_and_more.py  0010_alter_student_age_alter_student_first_name_and_more.py
student/permissions/: common_permissions.py  parent_permissions.py  student_permissions.py
student/tests/: tests_views.py
